indigo_app/static/stylesheets/app.scss
/* ... */
.sorted-table {
  th {
    cursor: pointer;
  }

  th.sort-up::after {
    font-family: fontawesome;
    content: ' \f0dd';
  }

  th.sort-down::after {
    font-family: fontawesome;
    content: ' \f0de';
  }
}

.import-form {
  padding: 10px 0px;

  .dropzone {
    width: 100%;
    border: 5px dashed $border-colour;
    text-align: center;
    padding-bottom: 25px;
    margin-bottom: 25px;

    &.incoming {
      background-color: $grey-lighter;
    }
  }

  .file-input-field {
    display: none;
  }

  .example {
    padding: 1px 8px;
    background: $grey-lighter;
    border-radius: 5px;
    h5 {
      font-weight: bold;
    }
  }

  .radio {
    margin-bottom: 0px;
  }

  input[type=radio]:checked + .example {
    background-color: $selection-colour;
  }

  section {
    margin-bottom: 25px;
  }

  .pages {
    display: none;
    width: 100%;
    height: 562px;

    position: relative;
    overflow-y: scroll;
    padding: 5px;
    background: $grey-lighter;

    // spinner waiting for first page
    &:empty::after {
      content: " ";
      position: relative;
      display: block;
      width: 30px;
      height: 30px;
      border: 3px solid $grey-darkest;
      border-bottom-color: transparent;
      border-radius: 50%;
      left: 50%;
      top: 50%;
      animation: fa-spin 1s infinite steps(16);
    }

    .page {
      position: absolute;
      box-sizing: content-box;
      border: 1px solid $grey-darkest;

      // spinner for loading pages
      &.loading::after {
        content: " ";
        position: relative;
        display: block;
        width: 30px;
        height: 30px;
        border: 3px solid $grey-darkest;
        border-bottom-color: transparent;
        border-radius: 50%;
        left: 50%;
        top: 50%;
        animation: fa-spin 1s infinite steps(16);
      }
    }

    .padding {
      position: absolute;
      width: 100px;
      height: 10px;
    }

    .cropbox {
      fill-opacity: 0.25;
      fill: #0983f6;
      cursor: move;
    }

    &.loading .cropbox {
      display: none;
    }

    .corner {
      fill-opacity: 0.75;
    }

    .ne, .sw { cursor: nesw-resize; }
    .nw, .se { cursor: nwse-resize; }
  }
}

.document-list-table {
  table-layout: fixed;

  th.title { width: 63% }
  th.year { width: 17% }
  th.updated_at { width: 20% }

  td, th {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
  }

  tr.amended-version {
    td:first-child {
      padding-left: 25px;
    }

    td {
      border-top: 0px;
    }
  }
}

/* table of contents browser */
.toc {
  position: absolute;
  top: 105px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  overflow-x: hidden;
  overflow-y: scroll;
  background-color: white;

  margin-top: 5px;
  border-top: 1px solid $grey;

  font-size: 13px;

  ol {
    list-style: none;
    padding: 5px 5px 5px 10px;
    
    a {
      display: block;
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
      text-decoration: none;
      margin-left: -5px;
      padding: 0px 0px 0px 5px;

      &.active,
      &.active:hover {
        border-radius: 5px;
        background-color: $link-active;
        color: white;
      }

      &:hover {
        border-radius: 5px;
        background-color: $grey-lighter;
      }
    }
  }

  .toc-item {
    &.akn-akomaNtoso,
    &.akn-coverpage,
    &.akn-preface,
    &.akn-preamble,
    &.akn-chapter,
    &.akn-part,
    &.akn-conclusions,
    &.akn-components,
    &.akn-component {
      font-weight: bold;
      margin-top: 5px;
    }
  }
}

/* library */
.filter-tag {
  display: inline-block;
  font-size: 12px;
  font-weight: normal;
  margin-bottom: 5px;

  .badge {
    font-size: 9px;
    padding: 3px 5px;
  }
}

.library-buttons {
  float: left;
  margin-top: 2px;
  margin-left: 96px;
  margin-right: 10px;
}

.header-search-box {
  float: left;
  width: 400px;
}

.library-sidebar {
  .btn-group {
    padding-left: 7px;
    padding-top: 5px;
  }

  .nav-pills a .badge {
    float: right;
  }

  .tag-filters {
    padding-left: 7px;
  }
}

/* amendments list */
.amendments-list {
  margin-top: 20px;

  .buttons {
    width: 1%;
    white-space: nowrap;
  }

  .date {
    width: 10%;
    white-space: nowrap;
  }
}

/* attachments list */
.attachments-list {
  padding-left: 0px;

  &> li {
    list-style: none;
    float: left;
    width: 150px;
    height: 220px;
    margin-right: 10px;
    margin-bottom: 10px;
    text-align: center;

    &.selected .wrapper {
      background-color: $selection-colour;
      border-radius: 5px;
    }
  }

  &.selectable {
    li {
      cursor: pointer;
    }

    .buttons {
      display: none;
    }
  }

  .wrapper {
    padding: 5px;
  }

  .icon {
    width: 120px;
    height: 120px;
    margin: auto;
  }

  .img-thumbnail {
    max-height: 120px;
  }

  .not-image {
    .fa {
      font-size: 64px;
      margin-top: 25px;
      color: gray;
    }
  }

  .filesize {
    color: gray;
  }

  .add-attachment {
    border: 5px dashed $border-colour;

    &.incoming {
      background-color: $selection-colour;
    }

    cursor: default !important;
  }

  input[type=file] {
    display: none;
  }
}

.modal {
  .nav {
    margin-bottom: 5px;
  }

  .document-chooser-list,
  .scrollable {
    max-height: 450px;
    overflow-y: auto;
  }
}

/* revision list */
.document-revisions-view {

  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;

  display: none;
  background: white;
  z-index: 200;

  &.in {
    display: block;
  }
}

.revisions-container {
  position: absolute;
  top: 0px;
  bottom: 0px;
  right: 0px;
  width: $sidebar-width;
  overflow-x: hidden;
  overflow-y: scroll;
}

.revisions-container + .document-sheet-container {
  right: $sidebar-width;
}

.revision-preview {
  ins {
    background-color: #a6f3a6;
    text-decoration: none;
  }

  del {
    color: #a33;
    background-color: #f8cbcb;
    text-decoration: line-through;
  }
}
/* ... */

